--- a/workshop/index.html
+++ b/workshop/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>McDonalds Argentina</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   </head>
   <body>
     <div class="container">
@@ -29,7 +30,8 @@
                 </ul>
             </div>
             <div class="col d-flex align-items-center justify-content-end">
-                <a href="carrito.html" id="botonCarrito" title="Ir al Carrito" class="btn btn-warning position-relative"><img src="images/cart.svg" width="24" alt="Carrito"><span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">0</span>
+                <a href="carrito.html" id="botonCarrito" title="Ir al Carrito" class="btn btn-warning position-relative">
+                    <img src="images/cart.svg" width="24" alt="Carrito"><span id="totalCarrito" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"></span>
                 </a>
             </div>
         </div>
