--- a/workshop/producto.html
+++ b/workshop/producto.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>McDonalds Argentina - Carrito</title>
+    <title>McDonalds Argentina</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   </head>
@@ -37,7 +37,18 @@
         </div>
     </div>
     <div class="container my-5">
-        <div id="contenido" class="row"></div>
+        <div class="row">
+            <div class="col-md-4 offset-md-2">
+                <img id="imagenProducto" class="img-fluid" />
+            </div>
+            <div class="col-md-4">
+                <h1 id="tituloProducto"></h1>
+                <h5 id="caloriasProducto"></h5>
+                <p id="descripcionProducto"></p>
+                <p id="precioProducto"></p>
+                <p id="botonAgregar"></p>
+            </div>
+        </div>
     </div>
     <div class="containerf-fluid bg-warning my-5 py-5">
         <div class="container">
@@ -87,6 +98,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="js/funciones.js"></script>
-    <script src="js/main_carrito.js"></script>
+    <script src="js/main_producto.js"></script>
   </body>
 </html>
